<resources>
    <string name="app_name">Lista de Tarefas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTitulo">Título da Tarefa:</string>
    <string name="tvDescricao">Descrição da Tarefa:</string>
    <string name="tvData">Data para conlusão:</string>
    <string name="btData">SELECIONE A DATA</string>
    <string name="btSalvar">SALVAR A TAREFA</string>

</resources>