<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CadTarefaFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTituloTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/titulo_tarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvDescTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDescricao"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/desc_tarefa"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:inputType="text|textMultiLine"
        android:gravity="top"/>
    <TextView
        android:id="@+id/tvPrevisao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvData"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btData"
            android:textSize="11.8dp"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"/>
        <Button
            android:id="@+id/btSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btSalvar"
            android:textSize="11.8dp"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <View
        android:id="@+id/linha"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:focusable="false"
        android:layout_marginTop="55dp" />

</LinearLayout>